--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -71,6 +71,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Set symbolic link
 RUN ln -sf /usr/bin/python3 /usr/bin/python
 
+# pip install
+RUN pip install --no-cache-dir cmake
+
 # # Add ROS repository and install ROS
 # RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
 # RUN sh -c 'echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" > /etc/apt/sources.list.d/ros2.list'
