--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -8,7 +8,7 @@ services:
         reservations:
           devices:
             - driver: nvidia
-              count: 1
+              count: 2
               capabilities: [ gpu ]
     network_mode: host # Use host network(IP and ports).
     extra_hosts:
@@ -48,3 +48,4 @@ services:
       - /dev/:/dev/
     tty: true
     stdin_open: true
+    command: /bin/bash
