--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -7,15 +7,15 @@ services:
       resources:
         reservations:
           devices:
-            - driver: nvidia
-              count: 2
+            - driver: nvidia                                                                                                                                                      
+              count: 1
               capabilities: [ gpu ]
-    network_mode: host # Use host network(IP and ports).
+    network_mode: host # Use host network(IP and ports).                                                                      
     extra_hosts:
       - "onolab:192.168.58.5" # The host PC
       - "ur5e:192.168.58.42" # UR5e
       - "cobotta:192.168.58.11" # cobotta
-    expose:
+    expose:                                                                                               
       - "50000" # sound sensor
       - "50001" # send commnad to UR
       - "50002" # external control of UR
@@ -30,6 +30,9 @@ services:
       # Display X Server GUI.
       - DISPLAY
       - QT_X11_NO_MITSHM=1
+      # NVIDIA GPU settings.
+      - NVIDIA_VISIBLE_DEVICES=all  # Use all GPUs.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+      - NVIDIA_DRIVER_CAPABILITIES=all
       # Set ROS environment variables. It is instead of writing them in .bashrc.
       - ROS_DOMAIN_ID=1
       - ROS_VERSION=2
